--- a/ATMmvd/Base.lproj/Main.storyboard
+++ b/ATMmvd/Base.lproj/Main.storyboard
@@ -52,13 +52,13 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="atm" translatesAutoresizingMaskIntoConstraints="NO" id="3XQ-AO-Y5V">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="447"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6f3-L7-jt0">
-                                <rect key="frame" x="100" y="552" width="175" height="65"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6f3-L7-jt0">
+                                <rect key="frame" x="100" y="547" width="175" height="70"/>
                             </imageView>
                             <view alpha="0.94999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1R8-Xm-ENw">
-                                <rect key="frame" x="0.0" y="184" width="125" height="128"/>
+                                <rect key="frame" x="0.0" y="214" width="125" height="123"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="muq-v1-2b1">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="muq-v1-2b1">
                                         <rect key="frame" x="8" y="10" width="109" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -99,12 +99,12 @@
                                     <constraint firstAttribute="trailing" secondItem="IOV-Y5-uen" secondAttribute="trailing" constant="8" id="va6-mb-FQZ"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Close" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7FP-Q6-guc">
-                                <rect key="frame" x="225" y="72" width="60" height="40"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Close" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7FP-Q6-guc">
+                                <rect key="frame" x="225" y="72" width="80" height="40"/>
                                 <color key="backgroundColor" red="0.99628132581710815" green="0.98432749509811401" blue="0.98405665159225464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="IR9-uc-v59"/>
-                                    <constraint firstAttribute="width" constant="60" id="JKJ-mU-LwC"/>
+                                    <constraint firstAttribute="width" constant="80" id="JKJ-mU-LwC"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
@@ -119,12 +119,12 @@
                             <constraint firstItem="6f3-L7-jt0" firstAttribute="centerX" secondItem="ADU-bo-lOg" secondAttribute="centerX" id="9fF-ny-ed1"/>
                             <constraint firstItem="3XQ-AO-Y5V" firstAttribute="top" secondItem="3zF-Lw-Shf" secondAttribute="top" id="Hf2-1m-Imh"/>
                             <constraint firstItem="1R8-Xm-ENw" firstAttribute="leading" secondItem="ADU-bo-lOg" secondAttribute="leading" id="Ime-Ak-VTI"/>
-                            <constraint firstItem="6f3-L7-jt0" firstAttribute="top" secondItem="1R8-Xm-ENw" secondAttribute="bottom" constant="240" id="Q4c-z6-qjs"/>
+                            <constraint firstItem="6f3-L7-jt0" firstAttribute="top" secondItem="1R8-Xm-ENw" secondAttribute="bottom" constant="210" id="Q4c-z6-qjs"/>
                             <constraint firstItem="ADU-bo-lOg" firstAttribute="bottom" secondItem="6f3-L7-jt0" secondAttribute="bottom" constant="50" id="Voe-dK-NJF"/>
                             <constraint firstItem="ADU-bo-lOg" firstAttribute="bottom" secondItem="3XQ-AO-Y5V" secondAttribute="bottom" constant="220" id="e3E-8t-H34"/>
-                            <constraint firstItem="1R8-Xm-ENw" firstAttribute="top" secondItem="ADU-bo-lOg" secondAttribute="top" constant="120" id="ei8-Jt-php"/>
+                            <constraint firstItem="1R8-Xm-ENw" firstAttribute="top" secondItem="ADU-bo-lOg" secondAttribute="top" constant="150" id="ei8-Jt-php"/>
                             <constraint firstItem="3XQ-AO-Y5V" firstAttribute="leading" secondItem="ADU-bo-lOg" secondAttribute="leading" id="exg-jV-sTd"/>
-                            <constraint firstItem="6f3-L7-jt0" firstAttribute="top" secondItem="3XQ-AO-Y5V" secondAttribute="bottom" constant="105" id="je6-pC-mSr"/>
+                            <constraint firstItem="6f3-L7-jt0" firstAttribute="top" secondItem="3XQ-AO-Y5V" secondAttribute="bottom" constant="100" id="je6-pC-mSr"/>
                             <constraint firstItem="6f3-L7-jt0" firstAttribute="leading" secondItem="ADU-bo-lOg" secondAttribute="leading" constant="100" id="m8B-hT-dhy"/>
                             <constraint firstItem="3XQ-AO-Y5V" firstAttribute="trailing" secondItem="ADU-bo-lOg" secondAttribute="trailing" id="vx4-ug-Uhu"/>
                         </constraints>
@@ -134,6 +134,7 @@
                         <outlet property="address" destination="muq-v1-2b1" id="es5-gf-9N3"/>
                         <outlet property="atmImage" destination="3XQ-AO-Y5V" id="nvU-c7-Q30"/>
                         <outlet property="depositLbl" destination="PaK-d5-jov" id="nng-Xh-nzX"/>
+                        <outlet property="grayView" destination="1R8-Xm-ENw" id="1Jz-u3-UoS"/>
                         <outlet property="moneyLbl" destination="7qB-FX-GYE" id="efS-yT-WYC"/>
                         <outlet property="networkImage" destination="6f3-L7-jt0" id="v5n-At-93J"/>
                         <outlet property="openingHoursLbl" destination="IOV-Y5-uen" id="MRc-Is-be3"/>
